# pypi

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: lint.yml  publish.yml
app/: layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/plaid/create-link-token/: route.ts
app/api/plaid/exchange-public-token/: route.ts
app/auth/callback/: route.ts
app/auth/login/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/chat/: page.tsx
app/dashboard/profile/: page.tsx
app/dashboard/settings/: page.tsx
app/onboard/: page.tsx
app/pricing/: page.tsx
components/: supabase-listener.tsx
components/dashboard/: bottom-nav.tsx
components/global/: footer.tsx  navbar.tsx  theme-toggle.tsx
components/onboarding/: plaid-link-button.tsx
fr8/: __init__.py
lib/: plaid-client.ts  supabase-client.ts  types.ts
scripts/: init.sql
src/fr8/: __init__.py  location.py
